--- a/drew.html
+++ b/drew.html
@@ -6,183 +6,159 @@
 <title>$DREW — Rise Together</title>
 
 <style>
-  :root {
-    --drew-pink: #E81D89;
-  }
+:root {
+  --drew-pink: #E81D89;
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  html, body {
-    width: 100%;
-    min-height: 100%;
-    font-family: system-ui, sans-serif;
-    color: #fff;
-    overflow-x: hidden;
-    position: relative;
-    background: #000;
-  }
+html, body {
+  width: 100%;
+  min-height: 100%;
+  font-family: system-ui, sans-serif;
+  color: #fff;
+  overflow-x: hidden;
+  background: #000;
+}
 
-  /* BACKGROUND ALWAYS UNCHANGED */
-  .bg-wallpaper {
-    position: fixed;
-    inset: 0;
-    z-index: -3;
-    display: flex;
-    flex-direction: column;
-  }
+/* BACKGROUND – SCROLLS WITH CONTENT */
+body {
+  background-image: url("peacockedit.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* keeps wallpaper visible at all times */
+}
 
-  .bg-top,
-  .bg-bottom {
-    flex: 1;
-    background-image: url("peacockedit.jpeg");
-    background-size: cover;
-    background-position: center;
-  }
+/* PAGE LAYOUT */
+.page {
+  position: relative;
+  padding: 12vh 6vw;
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  align-items: center;
+}
 
-  .bg-bottom {
-    transform: scaleY(-1);
-  }
+/* GLASS / BOX SECTIONS */
+.section-block {
+  width: 100%;
+  max-width: 1100px;
+  background: rgba(0, 0, 0, 0.35); /* readable but wallpaper visible */
+  border-radius: 18px;
+  padding: 44px 36px;
+  backdrop-filter: blur(3px);
+  border: 1px solid rgba(232,29,137,0.38);
+  box-shadow: 0 0 25px rgba(0,0,0,0.3);
+  text-align: center;
+}
 
-  /* Desktop tint — removed for mobile below */
-  body::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.1);
-    z-index: -2;
-  }
+/* TEXT READABILITY */
+.section-block * {
+  text-shadow: 0 0 10px rgba(0,0,0,0.9);
+}
 
-  .page {
-    position: relative;
-    padding: 10vh 6vw 12vh;
-    display: flex;
-    flex-direction: column;
-    gap: 90px;
-    align-items: center;
-  }
+/* MAIN HEADING */
+.heading {
+  font-size: clamp(55px, 12vw, 140px);
+  font-weight: 900;
+  letter-spacing: 0.04em;
+  color: var(--drew-pink);
+  text-shadow: 0 0 25px rgba(232,29,137,0.8);
+  text-transform: uppercase;
+}
 
-  /* Content blocks */
-  .section-block {
-    width: 100%;
-    max-width: 1100px;
-    background: rgba(0,0,0,0.1);
-    border-radius: 18px;
-    padding: 44px 36px;
-    backdrop-filter: blur(1.5px);
-    border: 1px solid rgba(232,29,137,0.28);
-    box-shadow: 0 0 22px rgba(0,0,0,0.25);
-    text-align: center;
-    text-shadow: 0 0 12px rgba(0,0,0,0.98);
-  }
+.divider {
+  width: 200px;
+  height: 5px;
+  margin: 18px auto;
+  background: var(--drew-pink);
+  border-radius: 4px;
+}
 
-  .heading {
-    font-size: clamp(48px, 10vw, 140px);
-    font-weight: 900;
-    color: var(--drew-pink);
-    text-shadow: 0 0 20px rgba(232,29,137,0.9);
-    text-transform: uppercase;
-  }
+.subheading {
+  font-size: clamp(16px, 2vw, 24px);
+  max-width: 900px;
+  line-height: 1.7;
+}
 
-  .divider {
-    width: 180px;
-    height: 4px;
-    margin: 18px auto;
-    background: var(--drew-pink);
-  }
+/* CARDS */
+.cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
 
-  .subheading {
-    font-size: clamp(15px, 2vw, 22px);
-    max-width: 900px;
-    opacity: 1;
-    line-height: 1.65;
-    margin: 0 auto;
-  }
+.card {
+  background: rgba(0,0,0,0.35);
+  border-radius: 14px;
+  padding: 26px;
+  border: 1px solid rgba(232,29,137,0.38);
+  line-height: 1.7;
+  font-size: clamp(15px, 2vw, 20px);
+}
 
-  .cards {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-  }
+/* ROADMAP */
+.roadmap-title {
+  font-size: clamp(34px, 7vw, 90px);
+  font-weight: 900;
+  color: var(--drew-pink);
+  margin-bottom: 32px;
+  text-shadow: 0 0 20px rgba(232,29,137,0.8);
+}
 
-  .card {
-    background: rgba(0,0,0,0.25);
-    border-radius: 14px;
-    padding: 26px;
-    line-height: 1.65;
-    border: 1px solid rgba(232,29,137,0.35);
-  }
+.phase-block {
+  width: 100%;
+  background: rgba(0,0,0,0.35);
+  border-radius: 16px;
+  border: 1px solid rgba(232,29,137,0.35);
+  padding: 22px 20px;
+  margin-bottom: 14px;
+  font-size: clamp(15px, 2vw, 20px);
+  line-height: 1.6;
+}
 
-  .roadmap-title {
-    font-size: clamp(34px, 6vw, 70px);
-    font-weight: 900;
-    color: var(--drew-pink);
-    margin-bottom: 32px;
-  }
+.phase-number {
+  font-size: 24px;
+  font-weight: 800;
+  color: var(--drew-pink);
+  margin-bottom: 6px;
+}
 
-  .phase-block {
-    background: rgba(10,10,10,0.25);
-    border-radius: 16px;
-    border: 2px solid rgba(232,29,137,0.35);
-    padding: 22px 20px;
-    margin-bottom: 14px;
-    line-height: 1.6;
-  }
+.arrow {
+  font-size: 38px;
+  color: var(--drew-pink);
+  margin: 14px 0;
+  text-shadow: 0 0 10px var(--drew-pink);
+}
 
-  .phase-number {
-    font-size: 22px;
-    font-weight: 800;
-    color: var(--drew-pink);
-  }
+/* FUTURE */
+.future-title {
+  font-size: clamp(24px, 3vw, 38px);
+  color: var(--drew-pink);
+  font-weight: 700;
+  margin-top: 20px;
+}
 
-  .arrow {
-    font-size: 36px;
-    color: var(--drew-pink);
-    margin: 10px 0;
-  }
-
-  .future-title {
-    font-size: clamp(24px, 3vw, 34px);
-    color: var(--drew-pink);
-    font-weight: 700;
-    margin-top: 20px;
-  }
-
-  .future-list {
-    list-style: none;
-    padding: 0;
-    line-height: 1.75;
-    font-size: clamp(15px, 1.85vw, 21px);
-  }
-
-  /* 📱 MOBILE — remove ANY layer over wallpaper */
-  @media (max-width: 820px) {
-    body::before {
-      background: transparent !important;
-    }
-    .section-block {
-      background: rgba(0,0,0,0.05);
-      backdrop-filter: none;
-      border: none;
-      box-shadow: none;
-    }
-  }
+.future-list {
+  list-style: none;
+  padding: 0;
+  line-height: 1.75;
+  font-size: clamp(15px, 2vw, 20px);
+  opacity: 0.95;
+}
 </style>
 </head>
 
 <body>
 
-<div class="bg-wallpaper">
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-</div>
-
 <div class="page">
 
+  <!-- HERO -->
   <div class="section-block">
     <div class="heading">$DREW</div>
     <div class="divider"></div>
@@ -192,12 +168,12 @@
     </div>
   </div>
 
+  <!-- MISSION -->
   <div class="section-block">
     <div class="cards">
       <section class="card">
         $DREW is a community-driven token with a purpose:<br>
-        to spark a ripple effect through the minds of men —<br>
-        reminding us we are all in this beautiful work of art together.
+        to spark a ripple effect through the minds of men — reminding us we are all in this beautiful work of art together.
       </section>
       <section class="card">
         The future of $DREW is shaped by its holders.<br>
@@ -207,6 +183,7 @@
     </div>
   </div>
 
+  <!-- ROADMAP -->
   <div class="section-block">
     <div class="roadmap-title">Roadmap</div>
 
@@ -241,5 +218,6 @@
   </div>
 
 </div>
+
 </body>
 </html>
