--- a/drew.html
+++ b/drew.html
@@ -10,66 +10,59 @@
   --drew-pink: #E81D89;
 }
 
+/* RESET */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* BACKGROUND = TRUE PAGE BACKDROP */
 html, body {
   width: 100%;
   min-height: 100%;
   font-family: system-ui, sans-serif;
   color: #fff;
   overflow-x: hidden;
-  background: #000;
+  background:
+    url("peacockedit.jpeg") center top / cover no-repeat,
+    url("peacockedit.jpeg") center bottom / cover no-repeat;
+  background-attachment: scroll;
+  background-repeat: repeat-y; /* ← continuous wallpaper */
 }
 
-/* 🔥 Continuous mirrored wallpaper */
-.bg-wallpaper {
-  position: fixed;
-  inset: 0;
-  z-index: -3;
-  background-image:
-    url("peacockedit.jpeg"),
-    url("peacockedit.jpeg");
-  background-size: cover;
-  background-repeat: repeat-y;
-  background-position: center top, center bottom;
-}
-
-/* CONTENT */
+/* CONTENT WRAPPER */
 .page {
-  position: relative;
-  padding: 12vh 6vw;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 10vh 6vw 14vh;
   display: flex;
   flex-direction: column;
-  gap: 70px;
+  gap: 90px;
   align-items: center;
-  z-index: 10;
 }
 
-/* GLASS BLOCK SECTIONS */
+/* CONTENT BLOCKS — readable & clean */
 .section-block {
   width: 100%;
-  max-width: 1100px;
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0,0,0,0.35);
   border-radius: 18px;
   padding: 44px 36px;
+  border: 1px solid rgba(232,29,137,0.4);
   backdrop-filter: blur(3px);
-  border: 1px solid rgba(232,29,137,0.38);
-  box-shadow: 0 0 25px rgba(0,0,0,0.3);
   text-align: center;
+}
+
+/* TEXT + TITLES */
+.section-block * {
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
-/* TITLES + TEXT */
 .heading {
-  font-size: clamp(55px, 12vw, 140px);
+  font-size: clamp(50px, 12vw, 140px);
   font-weight: 900;
-  letter-spacing: 0.04em;
   color: var(--drew-pink);
-  text-shadow: 0 0 25px rgba(232,29,137,0.8);
   text-transform: uppercase;
 }
 
@@ -83,43 +76,39 @@ html, body {
 
 .subheading {
   font-size: clamp(16px, 2vw, 24px);
-  max-width: 900px;
   line-height: 1.7;
+  max-width: 900px;
 }
 
 /* CARDS */
 .cards {
-  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 18px;
 }
 
 .card {
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.45);
   border-radius: 14px;
   padding: 26px;
-  border: 1px solid rgba(232,29,137,0.35);
+  border: 1px solid rgba(232,29,137,0.4);
   line-height: 1.7;
 }
 
 /* ROADMAP */
 .roadmap-title {
-  font-size: clamp(34px, 7vw, 90px);
+  font-size: clamp(36px, 7vw, 90px);
   font-weight: 900;
   color: var(--drew-pink);
   margin-bottom: 32px;
-  text-shadow: 0 0 20px rgba(232,29,137,0.8);
 }
 
 .phase-block {
-  width: 100%;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.45);
   border-radius: 16px;
-  border: 1px solid rgba(232,29,137,0.38);
+  border: 1px solid rgba(232,29,137,0.4);
   padding: 22px;
   margin-bottom: 14px;
-  line-height: 1.6;
 }
 
 .phase-number {
@@ -129,32 +118,26 @@ html, body {
 }
 
 .arrow {
-  font-size: 36px;
+  font-size: 38px;
   color: var(--drew-pink);
-  margin: 14px 0;
+  margin: 10px 0;
 }
 
 .future-title {
   font-size: clamp(24px, 3vw, 38px);
   color: var(--drew-pink);
   font-weight: 700;
-  margin-top: 22px;
 }
 
 .future-list {
   list-style: none;
-  padding: 0;
   line-height: 1.75;
-  font-size: clamp(16px, 2vw, 22px);
 }
 
 </style>
 </head>
 
 <body>
-
-<!-- ONLY change: continuous wallpaper -->
-<div class="bg-wallpaper"></div>
 
 <div class="page">
 
@@ -171,7 +154,8 @@ html, body {
     <div class="cards">
       <section class="card">
         $DREW is a community-driven token with a purpose:<br>
-        to spark a ripple effect through the minds of men — reminding us we are all in this beautiful work of art together.
+        to spark a ripple effect through the minds of men — reminding us
+        we are all in this beautiful work of art together.
       </section>
       <section class="card">
         The future of $DREW is shaped by its holders.<br>
@@ -188,18 +172,21 @@ html, body {
       <div class="phase-number">PHASE 1</div>
       NFT Collection #1 — 888 $DREW NFTs
     </div>
+
     <div class="arrow">↓</div>
 
     <div class="phase-block">
       <div class="phase-number">PHASE 2</div>
       $DREW Token Creation — Airdrop to NFT Holders
     </div>
+
     <div class="arrow">↓</div>
 
     <div class="phase-block">
       <div class="phase-number">PHASE 3</div>
       Token Trading Live
     </div>
+
     <div class="arrow">↓</div>
 
     <div class="phase-block">
