--- a/drew.html
+++ b/drew.html
@@ -10,60 +10,91 @@
   --drew-pink: #E81D89;
 }
 
-/* RESET */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* BACKGROUND = TRUE PAGE BACKDROP */
+/* 📌 PAGE + CONTENT */
 html, body {
   width: 100%;
   min-height: 100%;
   font-family: system-ui, sans-serif;
   color: #fff;
   overflow-x: hidden;
-  background:
-    url("peacockedit.jpeg") center top / cover no-repeat,
-    url("peacockedit.jpeg") center bottom / cover no-repeat;
-  background-attachment: scroll;
-  background-repeat: repeat-y; /* ← continuous wallpaper */
+  background: #000;
+  position: relative;
 }
 
-/* CONTENT WRAPPER */
-.page {
+/* 📌 ORIGINAL MIRRORED WALLPAPER — NOW CONTINUED CLEANLY */
+.bg-wallpaper {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 10vh 6vw 14vh;
+  min-height: 200vh; /* enough to cover scroll + more */
+  z-index: -3;
   display: flex;
   flex-direction: column;
-  gap: 90px;
-  align-items: center;
 }
 
-/* CONTENT BLOCKS — readable & clean */
+.bg-top,
+.bg-bottom {
+  flex: 1;
+  min-height: 100vh;
+  background-image: url("peacockedit.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
+.bg-bottom {
+  transform: scaleY(-1);
+}
+
+/* ⬇️ Make the pattern continue by repeating this block */
+.bg-wallpaper::after {
+  content: "";
+  position: absolute;
+  top: 200vh; /* starts right after the first mirrored pair */
+  width: 100%;
+  height: 200vh; /* another mirrored set */
+  background-image: url("peacockedit.jpeg");
+  background-size: cover;
+  background-position: center;
+  transform: scaleY(-1);
+  opacity: 1; /* fully visible repeat */
+  z-index: -4;
+}
+
+/* 📌 CONTENT BLOCKS (unchanged) */
+.page {
+  position: relative;
+  padding: 12vh 6vw;
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  align-items: center;
+  z-index: 10;
+}
+
 .section-block {
   width: 100%;
-  background: rgba(0,0,0,0.35);
+  max-width: 1100px;
+  background: rgba(0, 0, 0, 0.42);
   border-radius: 18px;
   padding: 44px 36px;
-  border: 1px solid rgba(232,29,137,0.4);
   backdrop-filter: blur(3px);
+  border: 1px solid rgba(232,29,137,0.38);
   text-align: center;
-}
-
-/* TEXT + TITLES */
-.section-block * {
+  box-shadow: 0 0 25px rgba(0,0,0,0.3);
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
 .heading {
-  font-size: clamp(50px, 12vw, 140px);
+  font-size: clamp(55px, 12vw, 140px);
   font-weight: 900;
   color: var(--drew-pink);
-  text-transform: uppercase;
 }
 
 .divider {
@@ -71,16 +102,14 @@ html, body {
   height: 5px;
   margin: 18px auto;
   background: var(--drew-pink);
-  border-radius: 4px;
 }
 
 .subheading {
   font-size: clamp(16px, 2vw, 24px);
-  line-height: 1.7;
   max-width: 900px;
+  line-height: 1.7;
 }
 
-/* CARDS */
 .cards {
   display: flex;
   flex-direction: column;
@@ -88,23 +117,22 @@ html, body {
 }
 
 .card {
-  background: rgba(0,0,0,0.45);
+  background: rgba(0,0,0,0.48);
   border-radius: 14px;
   padding: 26px;
-  border: 1px solid rgba(232,29,137,0.4);
+  border: 1px solid rgba(232,29,137,0.38);
   line-height: 1.7;
 }
 
-/* ROADMAP */
 .roadmap-title {
-  font-size: clamp(36px, 7vw, 90px);
+  font-size: clamp(34px, 7vw, 90px);
   font-weight: 900;
   color: var(--drew-pink);
   margin-bottom: 32px;
 }
 
 .phase-block {
-  background: rgba(0,0,0,0.45);
+  background: rgba(0,0,0,0.48);
   border-radius: 16px;
   border: 1px solid rgba(232,29,137,0.4);
   padding: 22px;
@@ -132,12 +160,18 @@ html, body {
 .future-list {
   list-style: none;
   line-height: 1.75;
+  font-size: clamp(16px, 2vw, 22px);
 }
-
 </style>
 </head>
 
 <body>
+
+<!-- 📌 THIS IS YOUR ORIGINAL WORKING WALLPAPER STRUCTURE -->
+<div class="bg-wallpaper">
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+</div>
 
 <div class="page">
 
