--- a/drew.html
+++ b/drew.html
@@ -16,24 +16,21 @@
   box-sizing: border-box;
 }
 
-/* 📌 PAGE + CONTENT */
 html, body {
   width: 100%;
   min-height: 100%;
   font-family: system-ui, sans-serif;
   color: #fff;
   overflow-x: hidden;
-  background: #000;
-  position: relative;
 }
 
-/* 📌 ORIGINAL MIRRORED WALLPAPER — NOW CONTINUED CLEANLY */
+/* ✔ ORIGINAL WALLPAPER — NOW CONTINUES DOWN THE PAGE */
 .bg-wallpaper {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 200vh; /* enough to cover scroll + more */
+  min-height: 300vh; /* 👈 THIS is the fix */
   z-index: -3;
   display: flex;
   flex-direction: column;
@@ -42,7 +39,6 @@ html, body {
 .bg-top,
 .bg-bottom {
   flex: 1;
-  min-height: 100vh;
   background-image: url("peacockedit.jpeg");
   background-size: cover;
   background-position: center;
@@ -52,22 +48,12 @@ html, body {
   transform: scaleY(-1);
 }
 
-/* ⬇️ Make the pattern continue by repeating this block */
-.bg-wallpaper::after {
-  content: "";
-  position: absolute;
-  top: 200vh; /* starts right after the first mirrored pair */
-  width: 100%;
-  height: 200vh; /* another mirrored set */
-  background-image: url("peacockedit.jpeg");
-  background-size: cover;
-  background-position: center;
-  transform: scaleY(-1);
-  opacity: 1; /* fully visible repeat */
-  z-index: -4;
+/* CONTENT */
+html, body {
+  height: auto;
+  background: transparent;
 }
 
-/* 📌 CONTENT BLOCKS (unchanged) */
 .page {
   position: relative;
   padding: 12vh 6vw;
@@ -78,23 +64,25 @@ html, body {
   z-index: 10;
 }
 
+/* CONTENT BLOCKS */
 .section-block {
   width: 100%;
   max-width: 1100px;
-  background: rgba(0, 0, 0, 0.42);
+  background: rgba(0, 0, 0, 0.36);
   border-radius: 18px;
   padding: 44px 36px;
   backdrop-filter: blur(3px);
   border: 1px solid rgba(232,29,137,0.38);
   text-align: center;
-  box-shadow: 0 0 25px rgba(0,0,0,0.3);
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
+/* TEXT STYLES */
 .heading {
   font-size: clamp(55px, 12vw, 140px);
   font-weight: 900;
   color: var(--drew-pink);
+  text-shadow: 0 0 25px rgba(232,29,137,0.8);
 }
 
 .divider {
@@ -102,6 +90,7 @@ html, body {
   height: 5px;
   margin: 18px auto;
   background: var(--drew-pink);
+  border-radius: 4px;
 }
 
 .subheading {
@@ -110,33 +99,39 @@ html, body {
   line-height: 1.7;
 }
 
+/* CARDS */
 .cards {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 18px;
 }
 
 .card {
-  background: rgba(0,0,0,0.48);
+  background: rgba(0,0,0,0.4);
   border-radius: 14px;
   padding: 26px;
-  border: 1px solid rgba(232,29,137,0.38);
+  border: 1px solid rgba(232,29,137,0.35);
   line-height: 1.7;
 }
 
+/* ROADMAP */
 .roadmap-title {
   font-size: clamp(34px, 7vw, 90px);
   font-weight: 900;
   color: var(--drew-pink);
   margin-bottom: 32px;
+  text-shadow: 0 0 20px rgba(232,29,137,0.8);
 }
 
 .phase-block {
-  background: rgba(0,0,0,0.48);
+  width: 100%;
+  background: rgba(0,0,0,0.4);
   border-radius: 16px;
-  border: 1px solid rgba(232,29,137,0.4);
+  border: 1px solid rgba(232,29,137,0.38);
   padding: 22px;
   margin-bottom: 14px;
+  line-height: 1.6;
 }
 
 .phase-number {
@@ -146,33 +141,37 @@ html, body {
 }
 
 .arrow {
-  font-size: 38px;
+  font-size: 36px;
   color: var(--drew-pink);
-  margin: 10px 0;
+  margin: 12px 0;
 }
 
 .future-title {
   font-size: clamp(24px, 3vw, 38px);
   color: var(--drew-pink);
   font-weight: 700;
+  margin-top: 22px;
 }
 
 .future-list {
   list-style: none;
-  line-height: 1.75;
+  padding: 0;
+  line-height: 1.7;
   font-size: clamp(16px, 2vw, 22px);
 }
+
 </style>
 </head>
 
 <body>
 
-<!-- 📌 THIS IS YOUR ORIGINAL WORKING WALLPAPER STRUCTURE -->
+<!-- ORIGINAL MIRRORED WALLPAPER -->
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
 </div>
 
+<!-- CONTENT -->
 <div class="page">
 
   <div class="section-block">
@@ -206,21 +205,18 @@ html, body {
       <div class="phase-number">PHASE 1</div>
       NFT Collection #1 — 888 $DREW NFTs
     </div>
-
     <div class="arrow">↓</div>
 
     <div class="phase-block">
       <div class="phase-number">PHASE 2</div>
       $DREW Token Creation — Airdrop to NFT Holders
     </div>
-
     <div class="arrow">↓</div>
 
     <div class="phase-block">
       <div class="phase-number">PHASE 3</div>
       Token Trading Live
     </div>
-
     <div class="arrow">↓</div>
 
     <div class="phase-block">
