--- a/drew.html
+++ b/drew.html
@@ -25,13 +25,13 @@ html, body {
   background: #000;
 }
 
-/* ✔ YOUR WALLPAPER — ONLY CHANGE: HEIGHT EXTENDED */
+/* YOUR WALLPAPER — continuous mirror pattern */
 .bg-wallpaper {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 300vh; /* 🔥 extends your SAME wallpaper down */
+  height: 500vh; /* extends the SAME wallpaper down */
   z-index: -3;
   display: flex;
   flex-direction: column;
@@ -49,7 +49,7 @@ html, body {
   transform: scaleY(-1);
 }
 
-/* CONTENT (unchanged) */
+/* CONTENT */
 .page {
   position: relative;
   padding: 12vh 6vw;
@@ -66,15 +66,17 @@ html, body {
   background: rgba(0, 0, 0, 0.36);
   border-radius: 18px;
   padding: 44px;
-  backdrop-filter: blur(3px);
   border: 1px solid rgba(232,29,137,0.38);
+  backdrop-filter: blur(3px);
   text-align: center;
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
+/* TEXT STYLES */
 .heading {
-  font-size: clamp(55px,12vw,140px);
+  font-size: clamp(55px, 12vw, 140px);
   font-weight: 900;
+  letter-spacing: 0.04em;
   color: var(--drew-pink);
   text-shadow: 0 0 25px rgba(232,29,137,0.8);
 }
@@ -87,12 +89,14 @@ html, body {
 }
 
 .subheading {
-  font-size: clamp(16px,2vw,24px);
+  font-size: clamp(16px, 2vw, 24px);
   max-width: 900px;
   line-height: 1.7;
 }
 
+/* CARDS */
 .cards {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -106,11 +110,13 @@ html, body {
   line-height: 1.7;
 }
 
+/* ROADMAP */
 .roadmap-title {
-  font-size: clamp(34px,7vw,90px);
+  font-size: clamp(34px, 7vw, 90px);
   font-weight: 900;
   color: var(--drew-pink);
   margin-bottom: 32px;
+  text-shadow: 0 0 20px rgba(232,29,137,0.8);
 }
 
 .phase-block {
@@ -134,7 +140,7 @@ html, body {
 }
 
 .future-title {
-  font-size: clamp(24px,3vw,38px);
+  font-size: clamp(24px, 3vw, 38px);
   color: var(--drew-pink);
   font-weight: 700;
   margin-top: 22px;
@@ -144,17 +150,22 @@ html, body {
   list-style: none;
   padding: 0;
   line-height: 1.7;
-  font-size: clamp(16px,2vw,22px);
+  font-size: clamp(16px, 2vw, 22px);
 }
+
 </style>
 </head>
 
 <body>
 
-<!-- ✔ YOUR EXACT ORIGINAL WALLPAPER -->
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+  <!-- add more pairs here if you ever need more scroll -->
 </div>
 
 <div class="page">
