--- a/drew.html
+++ b/drew.html
@@ -22,16 +22,12 @@ html, body {
   font-family: system-ui, sans-serif;
   color: #fff;
   overflow-x: hidden;
-  background: #000;
 }
 
-/* YOUR WALLPAPER — continuous mirror pattern */
+/* ✔ YOUR EXACT WALLPAPER SETUP */
 .bg-wallpaper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 500vh; /* extends the SAME wallpaper down */
+  position: absolute;
+  inset: 0;
   z-index: -3;
   display: flex;
   flex-direction: column;
@@ -49,7 +45,13 @@ html, body {
   transform: scaleY(-1);
 }
 
-/* CONTENT */
+/* 🧠 This makes wallpaper SCROLL with content */
+html, body {
+  height: auto;
+  background: transparent;
+}
+
+/* Floating content */
 .page {
   position: relative;
   padding: 12vh 6vw;
@@ -60,25 +62,27 @@ html, body {
   z-index: 10;
 }
 
+/* Designed readable blocks */
 .section-block {
   width: 100%;
   max-width: 1100px;
-  background: rgba(0, 0, 0, 0.36);
+  background: rgba(0, 0, 0, 0.36); /* wallpaper stays visible */
   border-radius: 18px;
-  padding: 44px;
+  padding: 44px 36px;
   border: 1px solid rgba(232,29,137,0.38);
   backdrop-filter: blur(3px);
   text-align: center;
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
-/* TEXT STYLES */
+/* Typography */
 .heading {
   font-size: clamp(55px, 12vw, 140px);
   font-weight: 900;
   letter-spacing: 0.04em;
   color: var(--drew-pink);
   text-shadow: 0 0 25px rgba(232,29,137,0.8);
+  text-transform: uppercase;
 }
 
 .divider {
@@ -86,6 +90,7 @@ html, body {
   height: 5px;
   margin: 18px auto;
   background: var(--drew-pink);
+  border-radius: 4px;
 }
 
 .subheading {
@@ -94,7 +99,7 @@ html, body {
   line-height: 1.7;
 }
 
-/* CARDS */
+/* Cards */
 .cards {
   width: 100%;
   display: flex;
@@ -110,7 +115,7 @@ html, body {
   line-height: 1.7;
 }
 
-/* ROADMAP */
+/* Roadmap */
 .roadmap-title {
   font-size: clamp(34px, 7vw, 90px);
   font-weight: 900;
@@ -120,11 +125,13 @@ html, body {
 }
 
 .phase-block {
+  width: 100%;
   background: rgba(0,0,0,0.4);
   border-radius: 16px;
   border: 1px solid rgba(232,29,137,0.38);
   padding: 22px;
-  margin-bottom: 14px;
+  margin-bottom: 12px;
+  line-height: 1.6;
 }
 
 .phase-number {
@@ -149,25 +156,22 @@ html, body {
 .future-list {
   list-style: none;
   padding: 0;
-  line-height: 1.7;
   font-size: clamp(16px, 2vw, 22px);
+  line-height: 1.7;
+  opacity: 0.95;
 }
-
 </style>
 </head>
 
 <body>
 
+<!-- ✔ ORIGINAL MIRRORED WALLPAPER BACKGROUND -->
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-  <div class="bg-top"></div>
-  <div class="bg-bottom"></div>
-  <!-- add more pairs here if you ever need more scroll -->
 </div>
 
+<!-- CONTENT OVER WALLPAPER -->
 <div class="page">
 
   <div class="section-block">
@@ -183,8 +187,7 @@ html, body {
     <div class="cards">
       <section class="card">
         $DREW is a community-driven token with a purpose:<br>
-        to spark a ripple effect through the minds of men — reminding us
-        we are all in this beautiful work of art together.
+        to spark a ripple effect through the minds of men — reminding us we are all in this beautiful work of art together.
       </section>
       <section class="card">
         The future of $DREW is shaped by its holders.<br>
