--- a/drew.html
+++ b/drew.html
@@ -169,6 +169,9 @@ html, body {
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
+  <!-- 👇 ADDED to extend wallpaper (the ONLY change) -->
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
 </div>
 
 <!-- CONTENT OVER WALLPAPER -->
