--- a/drew.html
+++ b/drew.html
@@ -22,9 +22,10 @@ html, body {
   font-family: system-ui, sans-serif;
   color: #fff;
   overflow-x: hidden;
+  background: transparent;
 }
 
-/* ✔ YOUR EXACT WALLPAPER SETUP */
+/* WALLPAPER — EXACT SAME LOOK, JUST MANY MORE */
 .bg-wallpaper {
   position: absolute;
   inset: 0;
@@ -45,13 +46,7 @@ html, body {
   transform: scaleY(-1);
 }
 
-/* 🧠 This makes wallpaper SCROLL with content */
-html, body {
-  height: auto;
-  background: transparent;
-}
-
-/* Floating content */
+/* CONTENT */
 .page {
   position: relative;
   padding: 12vh 6vw;
@@ -62,11 +57,11 @@ html, body {
   z-index: 10;
 }
 
-/* Designed readable blocks */
+/* CONTENT BLOCKS */
 .section-block {
   width: 100%;
   max-width: 1100px;
-  background: rgba(0, 0, 0, 0.36); /* wallpaper stays visible */
+  background: rgba(0, 0, 0, 0.36);
   border-radius: 18px;
   padding: 44px 36px;
   border: 1px solid rgba(232,29,137,0.38);
@@ -75,14 +70,13 @@ html, body {
   text-shadow: 0 0 10px rgba(0,0,0,0.9);
 }
 
-/* Typography */
+/* TEXT STYLES */
 .heading {
   font-size: clamp(55px, 12vw, 140px);
   font-weight: 900;
-  letter-spacing: 0.04em;
   color: var(--drew-pink);
-  text-shadow: 0 0 25px rgba(232,29,137,0.8);
   text-transform: uppercase;
+  text-shadow: 0 0 25px rgba(232,29,137,0.8);
 }
 
 .divider {
@@ -90,7 +84,6 @@ html, body {
   height: 5px;
   margin: 18px auto;
   background: var(--drew-pink);
-  border-radius: 4px;
 }
 
 .subheading {
@@ -99,7 +92,7 @@ html, body {
   line-height: 1.7;
 }
 
-/* Cards */
+/* CARDS */
 .cards {
   width: 100%;
   display: flex;
@@ -115,23 +108,20 @@ html, body {
   line-height: 1.7;
 }
 
-/* Roadmap */
+/* ROADMAP */
 .roadmap-title {
   font-size: clamp(34px, 7vw, 90px);
   font-weight: 900;
   color: var(--drew-pink);
   margin-bottom: 32px;
-  text-shadow: 0 0 20px rgba(232,29,137,0.8);
 }
 
 .phase-block {
-  width: 100%;
   background: rgba(0,0,0,0.4);
   border-radius: 16px;
   border: 1px solid rgba(232,29,137,0.38);
   padding: 22px;
-  margin-bottom: 12px;
-  line-height: 1.6;
+  margin-bottom: 14px;
 }
 
 .phase-number {
@@ -156,20 +146,31 @@ html, body {
 .future-list {
   list-style: none;
   padding: 0;
-  font-size: clamp(16px, 2vw, 22px);
   line-height: 1.7;
-  opacity: 0.95;
+  font-size: clamp(16px, 2vw, 22px);
 }
 </style>
 </head>
 
 <body>
 
-<!-- ✔ ORIGINAL MIRRORED WALLPAPER BACKGROUND -->
+<!-- WALLPAPER — ORIGINAL PATTERN REPEATED MANY TIMES -->
 <div class="bg-wallpaper">
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
-  <!-- 👇 ADDED to extend wallpaper (the ONLY change) -->
+
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+
+  <div class="bg-top"></div>
+  <div class="bg-bottom"></div>
+
   <div class="bg-top"></div>
   <div class="bg-bottom"></div>
 </div>
@@ -190,7 +191,8 @@ html, body {
     <div class="cards">
       <section class="card">
         $DREW is a community-driven token with a purpose:<br>
-        to spark a ripple effect through the minds of men — reminding us we are all in this beautiful work of art together.
+        to spark a ripple effect through the minds of men — reminding us
+        we are all in this beautiful work of art together.
       </section>
       <section class="card">
         The future of $DREW is shaped by its holders.<br>
